@@ -1,3 +1,11 @@
+2011-05-24  Paul Eggert  <eggert@cs.ucla.edu>
+
+	test-intprops: disable -Wtype-limits diagnostics
+	* tests/test-intprops.c: Use a pragma to ignore -Wtype-limits
+	diagnostics.  Otherwise, the integer overflow macros generate many
+	diagnostics.  Reported by Jim Meyering in
+	<http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00528.html>.
+
 2011-05-24  Eric Blake  <eblake@redhat.com>
 
 	docs: document recently fixed glibc printf bug
